--- a/Bitrise/View/Storyboards/Base.lproj/Main.storyboard
+++ b/Bitrise/View/Storyboards/Base.lproj/Main.storyboard
@@ -717,20 +717,6 @@
                             <customView translatesAutoresizingMaskIntoConstraints="NO" id="82J-cI-jpS">
                                 <rect key="frame" x="0.0" y="585" width="482" height="60"/>
                                 <subviews>
-                                    <button translatesAutoresizingMaskIntoConstraints="NO" id="JMg-rD-ZNo">
-                                        <rect key="frame" x="442" y="20" width="20" height="20"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="20" id="8C6-9n-8CK"/>
-                                            <constraint firstAttribute="width" constant="20" id="aue-7u-QY1"/>
-                                        </constraints>
-                                        <buttonCell key="cell" type="bevel" bezelStyle="rounded" image="Settings-icon" imagePosition="only" alignment="center" alternateImage="NSActionTemplate" state="on" imageScaling="proportionallyDown" inset="2" id="ONJ-GV-aRZ">
-                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                            <font key="font" metaFont="system"/>
-                                        </buttonCell>
-                                        <connections>
-                                            <action selector="openSettingsMenu:" target="XfG-lQ-9wD" id="5yq-o5-APQ"/>
-                                        </connections>
-                                    </button>
                                     <stackView distribution="fill" orientation="horizontal" alignment="centerY" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6CE-dn-y2P">
                                         <rect key="frame" x="199" y="13" width="84" height="29"/>
                                         <subviews>
@@ -750,13 +736,54 @@
                                             <real value="3.4028234663852886e+38"/>
                                         </customSpacing>
                                     </stackView>
+                                    <stackView distribution="fill" orientation="horizontal" alignment="top" spacing="20" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jll-pa-9nG">
+                                        <rect key="frame" x="402" y="20" width="60" height="20"/>
+                                        <subviews>
+                                            <button translatesAutoresizingMaskIntoConstraints="NO" id="Kyg-kQ-s8N">
+                                                <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="20" id="4Qk-I2-btg"/>
+                                                    <constraint firstAttribute="height" constant="20" id="pvG-lt-F8y"/>
+                                                </constraints>
+                                                <buttonCell key="cell" type="bevel" bezelStyle="rounded" image="Settings-icon" imagePosition="only" alignment="center" alternateImage="NSActionTemplate" state="on" imageScaling="proportionallyDown" inset="2" id="GAT-aG-azc">
+                                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                                    <font key="font" metaFont="system"/>
+                                                </buttonCell>
+                                                <connections>
+                                                    <action selector="openFiltersMenu:" target="XfG-lQ-9wD" id="MeX-er-MzK"/>
+                                                </connections>
+                                            </button>
+                                            <button translatesAutoresizingMaskIntoConstraints="NO" id="JMg-rD-ZNo">
+                                                <rect key="frame" x="40" y="0.0" width="20" height="20"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="20" id="8C6-9n-8CK"/>
+                                                    <constraint firstAttribute="width" constant="20" id="aue-7u-QY1"/>
+                                                </constraints>
+                                                <buttonCell key="cell" type="bevel" bezelStyle="rounded" image="Settings-icon" imagePosition="only" alignment="center" alternateImage="NSActionTemplate" state="on" imageScaling="proportionallyDown" inset="2" id="ONJ-GV-aRZ">
+                                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                                    <font key="font" metaFont="system"/>
+                                                </buttonCell>
+                                                <connections>
+                                                    <action selector="openSettingsMenu:" target="XfG-lQ-9wD" id="5yq-o5-APQ"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <visibilityPriorities>
+                                            <integer value="1000"/>
+                                            <integer value="1000"/>
+                                        </visibilityPriorities>
+                                        <customSpacing>
+                                            <real value="3.4028234663852886e+38"/>
+                                            <real value="3.4028234663852886e+38"/>
+                                        </customSpacing>
+                                    </stackView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="JMg-rD-ZNo" secondAttribute="trailing" constant="20" id="1bd-x1-qIK"/>
                                     <constraint firstAttribute="height" constant="60" id="8RC-1p-PQm"/>
+                                    <constraint firstAttribute="trailing" secondItem="jll-pa-9nG" secondAttribute="trailing" constant="20" id="FDF-PO-5aT"/>
                                     <constraint firstItem="6CE-dn-y2P" firstAttribute="top" secondItem="82J-cI-jpS" secondAttribute="top" constant="18" id="Mx3-4U-wMo"/>
-                                    <constraint firstItem="JMg-rD-ZNo" firstAttribute="top" secondItem="82J-cI-jpS" secondAttribute="top" constant="20" id="Wol-v1-FS9"/>
                                     <constraint firstItem="6CE-dn-y2P" firstAttribute="centerX" secondItem="82J-cI-jpS" secondAttribute="centerX" id="apR-9t-fOR"/>
+                                    <constraint firstItem="jll-pa-9nG" firstAttribute="top" secondItem="82J-cI-jpS" secondAttribute="top" constant="20" id="jbo-gq-fBz"/>
                                 </constraints>
                             </customView>
                             <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="90" horizontalPageScroll="10" verticalLineScroll="90" verticalPageScroll="10" hasHorizontalScroller="NO" hasVerticalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jro-eN-807">
@@ -1318,6 +1345,7 @@ https://discuss.bitrise.io/t/personal-access-tokens-beta/1383</string>
                     <connections>
                         <outlet property="buildMenu" destination="Q6c-WQ-hru" id="n3V-JU-dc4"/>
                         <outlet property="emptyView" destination="lhQ-nT-Gbv" id="jxe-DC-jmu"/>
+                        <outlet property="filterMenu" destination="b4p-Af-EcD" id="37W-NI-eWL"/>
                         <outlet property="hintView" destination="o7A-9p-aS2" id="GIa-9A-1QG"/>
                         <outlet property="outlineView" destination="1IG-VH-UrI" id="K1Y-S7-hEr"/>
                         <outlet property="settingsMenu" destination="Gbj-C2-212" id="bEI-Ue-dRa"/>
@@ -1370,6 +1398,25 @@ https://discuss.bitrise.io/t/personal-access-tokens-beta/1383</string>
                         </menuItem>
                         <menuItem isSeparatorItem="YES" id="6B4-eS-GXx"/>
                         <menuItem title="Quit" tag="3" keyEquivalent="q" id="f60-ia-sAq"/>
+                    </items>
+                </menu>
+                <menu title="Settings" id="b4p-Af-EcD">
+                    <items>
+                        <menuItem title="Success" tag="1" id="DO8-ZS-jPB">
+                            <modifierMask key="keyEquivalentModifierMask"/>
+                        </menuItem>
+                        <menuItem title="Failed" tag="1" id="jUt-YM-dNb">
+                            <modifierMask key="keyEquivalentModifierMask"/>
+                        </menuItem>
+                        <menuItem title="Aborted" tag="2" id="Py8-NJ-s2W">
+                            <modifierMask key="keyEquivalentModifierMask"/>
+                        </menuItem>
+                        <menuItem title="On Hold" tag="2" id="M2X-AL-t1T">
+                            <modifierMask key="keyEquivalentModifierMask"/>
+                        </menuItem>
+                        <menuItem title="In Progress" tag="2" id="p5X-lD-xFF">
+                            <modifierMask key="keyEquivalentModifierMask"/>
+                        </menuItem>
                     </items>
                 </menu>
             </objects>
