--- a/Bitrise/View/Storyboards/Base.lproj/Main.storyboard
+++ b/Bitrise/View/Storyboards/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="21225"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -740,15 +741,16 @@
                                         <rect key="frame" x="402" y="20" width="60" height="20"/>
                                         <subviews>
                                             <button translatesAutoresizingMaskIntoConstraints="NO" id="Kyg-kQ-s8N">
-                                                <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
+                                                <rect key="frame" x="0.0" y="-3" width="20.5" height="26"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="20" id="4Qk-I2-btg"/>
                                                     <constraint firstAttribute="height" constant="20" id="pvG-lt-F8y"/>
                                                 </constraints>
-                                                <buttonCell key="cell" type="bevel" bezelStyle="rounded" image="Settings-icon" imagePosition="only" alignment="center" alternateImage="NSActionTemplate" state="on" imageScaling="proportionallyDown" inset="2" id="GAT-aG-azc">
+                                                <buttonCell key="cell" type="bevel" bezelStyle="rounded" image="checklist" catalog="system" imagePosition="only" alignment="center" alternateImage="NSActionTemplate" state="on" imageScaling="proportionallyUpOrDown" inset="2" id="GAT-aG-azc">
                                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                     <font key="font" metaFont="system"/>
                                                 </buttonCell>
+                                                <color key="contentTintColor" name="GreenColor"/>
                                                 <connections>
                                                     <action selector="openFiltersMenu:" target="XfG-lQ-9wD" id="MeX-er-MzK"/>
                                                 </connections>
@@ -1457,10 +1459,14 @@ https://discuss.bitrise.io/t/personal-access-tokens-beta/1383</string>
         <image name="ShadowTop" width="430" height="25"/>
         <image name="TripleDotsShadowed" width="70" height="90"/>
         <image name="calendar" width="10" height="10"/>
+        <image name="checklist" catalog="system" width="18" height="15"/>
         <image name="clock" width="10" height="10"/>
         <image name="dots" width="431" height="11"/>
         <image name="git-branch" width="10" height="10"/>
         <image name="list" width="10" height="10"/>
         <image name="message-square" width="10" height="10"/>
+        <namedColor name="GreenColor">
+            <color red="0.78823529411764703" green="0.97647058823529409" blue="0.95686274509803926" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
