--- a/Bitrise/View/Storyboards/Base.lproj/Main.storyboard
+++ b/Bitrise/View/Storyboards/Base.lproj/Main.storyboard
@@ -741,12 +741,12 @@
                                         <rect key="frame" x="402" y="20" width="60" height="20"/>
                                         <subviews>
                                             <button translatesAutoresizingMaskIntoConstraints="NO" id="Kyg-kQ-s8N">
-                                                <rect key="frame" x="0.0" y="-3" width="20.5" height="26"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="20" id="4Qk-I2-btg"/>
                                                     <constraint firstAttribute="height" constant="20" id="pvG-lt-F8y"/>
                                                 </constraints>
-                                                <buttonCell key="cell" type="bevel" bezelStyle="rounded" image="checklist" catalog="system" imagePosition="only" alignment="center" alternateImage="NSActionTemplate" state="on" imageScaling="proportionallyUpOrDown" inset="2" id="GAT-aG-azc">
+                                                <buttonCell key="cell" type="bevel" bezelStyle="rounded" image="filter-menu-circle" imagePosition="only" alignment="center" alternateImage="NSActionTemplate" state="on" imageScaling="proportionallyUpOrDown" inset="2" id="GAT-aG-azc">
                                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                     <font key="font" metaFont="system"/>
                                                 </buttonCell>
@@ -1442,9 +1442,9 @@ https://discuss.bitrise.io/t/personal-access-tokens-beta/1383</string>
         <image name="ShadowTop" width="430" height="25"/>
         <image name="TripleDotsShadowed" width="70" height="90"/>
         <image name="calendar" width="10" height="10"/>
-        <image name="checklist" catalog="system" width="18" height="15"/>
         <image name="clock" width="10" height="10"/>
         <image name="dots" width="431" height="11"/>
+        <image name="filter-menu-circle" width="24" height="24"/>
         <image name="git-branch" width="10" height="10"/>
         <image name="list" width="10" height="10"/>
         <image name="message-square" width="10" height="10"/>
